# Computational-Physics-A

./: README.md
homework_1/: CMakeLists.txt  Random_num.cpp  data_plot.py  x^k.docx
homework_1/report/: report.aux  report.out  report.tex
homework_10/: CMakeLists.txt  RW.h  RW_Cv.txt  RW_Cv_0.5.txt  RW_Cv_0.5_try.txt  RW_Cv_100000.txt  RW_Cv_1000000.txt  RW_Cv_50000.txt  RW_Cv_50000_walk0.2.txt  RW_Cv_exp.txt  RW_Cv_try.txt  RW_xy_try.txt  data_plot.py  main.cpp  random_num.txt
homework_11/: CMakeLists.txt  DBM.cpp  DBM.h  DBM_1.txt  DBM_2.txt  DBM_3.txt  DBM_eta0.5.txt  DBM_eta1.5.txt  DBM_eta2.txt  DBM_test.txt  DLA.txt  DLA_1.txt  DLA_2.txt  DLA_double_10000.txt  DLA_float.txt  DLA_test.txt  GIF.py  Particle.cpp  Particle.h  data_plot.py  homework_11.exe.stackdump  main.cpp
homework_12/: 第十二次实验报告.md
homework_13/: CMakeLists.txt  Sch.cpp  data_plot.py  main.cpp  results_N_error_1.txt  results_N_error_try.txt  results_gamma_error_2.txt  results_gamma_error_try.txt
homework_15/: CMakeLists.txt  beta=0.2.txt  beta=0.2_0.1.txt  beta=0.2_00.txt  beta=0.2_2.txt  beta=1.0.txt  beta=1.0_0.1.txt  beta=1.0_00.txt  beta=1.0_2.txt  beta=5.0.txt  beta=5.0_0.1.txt  beta=5.0_00.txt  beta=5.0_2.txt  data_plot.py  main.cpp  results - 副本.txt  results.txt
homework_16/: CMakeLists.txt  data_plot.py  lambda.txt  main.cpp  main.py  results_try_0.3175.txt  results_try_0.31755.txt  results_try_0.833.txt  results_try_0.858.txt  results_try_0.864.txt  results_try_0.865.txt  纵向.txt
homework_17/: Boxcounting.txt  CMakeLists.txt  DLA_test.txt  GIF.py  Particle.cpp  Particle.h  Sch.h  (+2 more)
(+107 files in other folders)
